# agile-payload-transport

./: .gitignore  CMakeLists.txt  log_nmpc.txt  log_opt.txt
cfg/: opt_cfg_file.yaml
envs/empty1/: cfg.yaml  env.yaml  init_guess_mujoco.yaml  nmpc_result.yaml  opt_cfg_file.yaml  result_dbcbs_opt1025202362.yaml  result_dbcbs_opt126183327.yaml  result_dbcbs_opt1654844049.yaml  result_dbcbs_opt184794536.yaml  result_dbcbs_opt1921376925.yaml
envs/empty2/: cfg.yaml  nmpc_result.yaml  opt_cfg_file.yaml  result_dbcbs_opt.yaml
envs/hover1/: cfg.yaml  nmpc_result.yaml  opt_cfg_file.yaml
envs/hover2/: cfg.yaml  env.yaml
envs/mujoco/nmpc/empty2/: env.yaml
envs/mujoco/nmpc/qempty1/: env.yaml
envs/mujoco/nmpc/qforest/: env.yaml
envs/mujoco/nmpc/switch2/: init_guess_mujoco.yaml
envs/obs1/: cfg.yaml  env.yaml  init_guess_mujoco.yaml  nmpc_result.yaml  result_dbcbs_opt.yaml  result_dbcbs_opt1334704882.yaml  result_dbcbs_opt2061089174.yaml  result_dbcbs_opt329420370.yaml  result_dbcbs_opt52169337.yaml  result_dbcbs_opt_broken_0.yaml
envs/obs2/: cfg.yaml  env.yaml  nmpc_result.yaml  opt_cfg_file.yaml  result_dbcbs_opt.yaml
envs/switch2/: env.yaml
envs/window2/: env.yaml
envs/zero_goal/: cfg.yaml  env.yaml  opt_cfg_file.yaml
include/: bc_policy_onnx.hpp  croco_models.hpp  general_utils.hpp  generate_ocp.hpp  motions.hpp  mujoco_quadrotor.hpp  mujoco_quadrotors_payload.hpp  nmpc_controller.hpp  ocp.hpp  opt_simulate_mujoco.hpp  options.hpp  policy_onnx.hpp  robot_models.hpp  robot_models_base.hpp
media/empty2/: init_guess.yaml  opt.yaml
media/nmpc/empty2/: opt.yaml
models/: mujocoquad_empty.yaml  mujocoquadspayload_empty1.yaml  mujocoquadspayload_empty2.yaml  mujocoquadspayload_obs1.yaml  mujocoquadspayload_switch2.yaml  mujocoquadspayload_window2.yaml
models/xml/: 1cfs_payload_tendons_empty.xml  1cfs_payload_tendons_obs.xml  2cfs_payload_tendons_empty.xml  2cfs_payload_tendons_switch.xml  2cfs_payload_tendons_window.xml  cf.xml
scripts/: run_standalone_zerogoal_ocp.sh
scripts/nn/: base_simulator.py  cfg.yaml  mujoco_model.py  rollout_bc_mujoco.py  train.py
scripts/nn/bc_traj/: bc_policy_1r.onnx  bc_policy_1r.onnx.data  best.pt
scripts/nn/data/: traj1.yaml
src/: bc_policy_onnx.cpp  croco_models.cpp  generate_ocp.cpp  motions.cpp  mujoco_quadrotor.cpp  mujoco_quadrotors_payload.cpp  nmpc_controller.cpp  nmpc_mujoco.cpp  ocp.cpp  opt_simulate_mujoco.cpp  options.cpp  policy_onnx.cpp  py_nmpc_controller.cpp  robot_models.cpp  robot_models_base.cpp
standalone/: HANDOFF_STANDALONE_OCP.md  NEXT_SESSION_PROMPT.md  README.md  check_and_plot_standalone.py  standalone_mj_croc_ocp.cpp
